frontend/src/app.css
:root {
  font-family: 'Roboto', sans-serif;
  font-size: 16px;
  line-height: 24px;
  font-weight: 400;

  color-scheme: light;
  color: rgba(68, 66, 66, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

button {
  border: none;
  border-radius: 10px;
  padding: 5px;
  background-color: white;
}

button:hover:enabled {
  background-image: linear-gradient(rgb(0 0 0/10%) 0 0);
}

button:active:enabled {
  background-image: linear-gradient(rgb(0 0 0/20%) 0 0);
}

button:focus:enabled {
  outline: none !important;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1, h2 {
  word-break: keep-all;
  margin: 0 !important;
  line-height: normal;
  margin-bottom: 2vh !important;
}

h1 {
  font-size: 2.5em;
  line-height: 1.1;
}

.card {
  padding: 2em;
}

#app {
  margin: 0 auto;
  text-align: center;
}

main {
}

#main-view {
  width: 70vw;
  min-width: 1000px;
}

#editor-main {
  display: flex;
  width: 70vw;
  min-width: 1000px;
}

#editor-div {
  width: 75%;
  max-width: 75%;
  font-size: 1.85rem;
  padding-top: 0 !important;
}

#format-div {
  padding: 0.125rem !important;
  display: flex;
  align-items: center;
}


#storage-div {
  width: 25%;
  max-width: 25%;
  padding: 1rem;
}

#storage-div div {
  overflow-y: scroll;
}

#editor-header {
  display: flex;
  margin: 0.5rem;
  border-radius: 1rem;
}

#controls {
  display: flex;
  justify-content: space-between;
  width: 100%;
  background-color: white;
  border-radius: 1rem;
  width: 85%;
}

#editor-main div {
  padding : 1rem;
  margin: 0.5rem;
  background-color: white;
  border-radius: 1rem;
}

.format_button {
  font-size: inherit;
  font-family: inherit;
  border: 1px solid white;
  border-radius: 0.3rem;
  padding: 0.1rem 0.4rem;
  accent-color: black;
  width: 3rem;
  height: 3rem;
}

.format_button p{
  margin:0;
  font-size: 1.5rem;
}

.format_button:hover {
  border: 1px solid white;
  background-color: #e0e0e0;
}

.format_button:active {
  background-color: #c0c0c0;
}

.format_button:focus {
  outline: none;
}

.is_button_inactive {
  color: #000;
  background: white;
}

.is_button_active {
  background: black;
  color: #fff;
}

.is_button_active:hover {
  background: black;
  color: #fff;
}

.is_button_active:focus {
  background: black;
  color: #fff;
}

button:hover {
  border-color: #646cff;
}
button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.ProseMirror {
  height: 75vh;
  text-align: left;
  overflow-y: scroll;
  font-size: 14px;
}

.ProseMirror p {
  margin-top: 0;
  margin-bottom: 1.5vh;
  word-break:keep-all;
  line-height: 1.125;
}

.ProseMirror:focus {
  outline: none;
}

body {
  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
  background-size: 400% 400%;
  animation: gradient 60s ease infinite;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 0% 50%;
  }
}

/* width */
::-webkit-scrollbar {
  width: 10px;
  border-radius: 50px;
}

/* Track */
::-webkit-scrollbar-track {
  background: white;
  border-radius: 50px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 50px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #555;
  border-radius: 50px;
}

@font-face {
  font-family: Softers;
  src: url("assets/Softers.otf") format("opentype");
}

.question-div {
  padding: 2rem;
  width: 25vw !important;
  height: 15vw !important;;
  min-width: 275px;
  min-height: 100px;
  font-size: 3rem;
}

.question-div p {
  margin: 0;
  line-height: normal;
  margin-bottom: 2vh !important;
}

.cards-view-bottom {
  display: flex;
  justify-content: space-around;
  border-radius: 1rem;
  width: 45%;
  margin: auto;
  align-items: center;
  font-size: 2rem;
}

.cards-view-bottom button {
  font-size: 1.5rem;
  width: 3rem;
  height: 2.5rem;
  border-radius: 10rem;
}

.cards-view-bottom span {
  font-size: 2rem;
  padding: 0.5rem;
}

html,
body {
  margin: 0px;
}

